--- a/web_server/html/disabled_.htm
+++ b/web_server/html/disabled_.htm
@@ -7,18 +7,19 @@
 
 <body>
     <div class="main-wrap fadeIn" style="top:0 !important">
-        <div id="spinner-container"></div>
         <div class="container">
             <div class="card-container">
                 <div class="settingsHeader">Lockdown Mode</div>
-                <div class="card-basic">
-                    <div id="c3">
-                        <svg viewBox="0 0 24 24">
-                            <path d="M12,0A12,12 0 0,1 24,12A12,12 0 0,1 12,24A12,12 0 0,1 0,12A12,12 0 0,1 12,0M12,2A10,10 0 0,0 2,12C2,14.4 2.85,16.6 4.26,18.33L18.33,4.26C16.6,2.85 14.4,2 12,2M12,22A10,10 0 0,0 22,12C22,9.6 21.15,7.4 19.74,5.67L5.67,19.74C7.4,21.15 9.6,22 12,22Z" />
-                        </svg>
-                        <br>
-                        <b style="font-size:18px">Wi-PWN disabled!</b>
-                        <br><b style="font-weight: 300">Go away script kiddie!</b>
+                <div class="card">
+                    <div class="card-content">
+                        <div id="c3">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M12,0A12,12 0 0,1 24,12A12,12 0 0,1 12,24A12,12 0 0,1 0,12A12,12 0 0,1 12,0M12,2A10,10 0 0,0 2,12C2,14.4 2.85,16.6 4.26,18.33L18.33,4.26C16.6,2.85 14.4,2 12,2M12,22A10,10 0 0,0 22,12C22,9.6 21.15,7.4 19.74,5.67L5.67,19.74C7.4,21.15 9.6,22 12,22Z" />
+                            </svg>
+                            <br>
+                            <b style="font-size:18px">Wi-PWN disabled!</b>
+                            <br><b style="font-weight: 300">Go away script kiddie!</b>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -59,9 +60,11 @@
         .container {
             min-height: initial;
         }
-        .card-basic {
+
+        .card {
             background: #ffcdd2;
         }
+
         .settingsHeader {
             color: #f6c4c4
         }
