Updated some links

--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -29,9 +29,8 @@
     <div class="main-wrap">
         <div class="container">
             <div class="card-container">
-                <div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">Scan for Wi-Fi networks
+                <div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">Scan for networks&nbsp;<span id="networksFound"></span>
                     <div class="network-info">
-                        <div id="networksFound"></div>
                         <div id="apMAC"></div>
                     </div>
                 </div>
