--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -35,12 +35,17 @@
                         <br>
                         <br>
                         <b>This software is intended for trained professionals!</b>
-                        <br>It can perform deauth attacks on unprotected <i>802.11</i> Wi-Fi networks, <i>which could be perceived as using an illegal 'Wi-Fi Jammer'.</i>
-                        <hr> Wi-PWN is updated and maintained by:
-                        <br>
-                        <b style="font-size: 1.1em">
-                    <a href="https://samdenty99.github.io/about" target="_blank">@samdenty99</a> (Sam Denty)</b>
-                        <br>
+                        <br>It can perform deauth attacks on unprotected <i>802.11</i> Wi-Fi networks, <i>which could be perceived as using an illegal 'Wi-Fi Jammer'.</i><hr>
+                        <a class="samddAttrib" href="https://samdenty99.github.io/about" target="_blank">
+                            <span>Wi-PWN was designed by <b>samdd design</b>:</span>
+                            <br>
+                            <p>
+                                <button>@samdenty99</button> (Sam Denty)
+                            </p>
+                        </a>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://samdenty99.github.io/r?report-bug-wi-pwn" target="blank_">Report bug</a><a href="https://samdenty99.github.io/projects" class="right" target="blank_">Other projects</a>
                     </div>
                 </div>
             </div>
@@ -48,7 +53,7 @@
                 <div class="settingsHeader">Contributors</div>
                 <div class="card">
                     <div class="card-content">
-                        <a href="https://github.com/spacehuhn/esp8266_deauther"><b>@spacehuhn</a> (Stefan Kremser)</b>
+                        <a href="https://github.com/spacehuhn/esp8266_deauther"><b>@spacehuhn</b></a> (Stefan Kremser) 
                         <br>
                         <a href="https://github.com/N0vaPixel" target="_blank">@N0vaPixel</a> (Aur&eacute;lien Hernandez)
                         <br>
