--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -12,7 +12,7 @@
             <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
-            <a href="/">Scan</a>
+            <a href="./">Scan</a>
             <a href="users.html">Users</a>
             <a href="attack.html">Attack</a>
             <a href="control.html">Control</a>
@@ -69,13 +69,14 @@
                         <br>
                         <a href="https://github.com/schinfo" target="_blank">@schinfo</a> (Helmut)
                         <br>
+                        <a href="https://github.com/LarzJ" target="_blank">@LarzJ</a> (Larz)
+                        <br>
                         <a href="https://github.com/ajnavarro" target="_blank">@ajnavarro</a> (Antonio Navarro Perez)
                         <br>
                         <br>
                         <div class="divider"></div>
-                        <br> For more information go to <a href="https://github.com/samdenty99/Wi-PWN/graphs/contributors">contributors page</a> on GitHub.
+                        <br>For more information go to <a href="https://github.com/samdenty99/Wi-PWN/graphs/contributors">contributors page</a> on GitHub.
                     </div>
-                    </a>
                 </div>
                 <hr>
                 <div class="settingsHeader">Included libraries</div>
