--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -12,7 +12,7 @@
             <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
-            <a href="/">Scan</a>
+            <a href="./">Scan</a>
             <a href="users.html">Users</a>
             <a href="attack.html" class="active">Attack</a>
             <a href="control.html">Control</a>
