--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -12,7 +12,7 @@
             <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
-            <a href="/" class="active">Scan</a>
+            <a href="./" class="active">Scan</a>
             <a href="users.html">Users</a>
             <a href="attack.html">Attack</a>
             <a href="control.html">Control</a>
