Fixed bugs + updated README

--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -59,7 +59,7 @@
                         <br>
                         <a href="https://github.com/SaltyViper" target="_blank">@SaltyViper</a>
                         <br>
-                        <a href="https://github.com/LarzJ" target="_blank">@LarzJ</a> (Larz)
+                        <a href="https://github.com/LarzJ" target="_blank">@LarzJ</a> (Larz Jacobs)
                         <br>
                         <a href="https://github.com/ericktedeschi" target="_blank">@ericktedeschi</a> (Erick Belluci Tedeschi)
                         <br>
