--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="col-12">
                             <div class="input-container">
-                                <input placeholder=" " id="password" type="text" required="" minlength="8" maxlength="32">
+                                <input placeholder=" " id="password" type="text" minlength="8" maxlength="32">
                                 <label for="ssid">Password</label>
                             </div>
                         </div>
