Bug fixes + control page nearly finished

--- a/web_server/html/control.html
+++ b/web_server/html/control.html
@@ -29,10 +29,12 @@
         <div class="container">
             <div class="card-container">
                 <div class="settingsHeader">GPIO Control</div>
-                <table id="controlPins"></table>
-            </div>
-            <div class="card-container oa">
-                <button onclick="resetPins()" class="right">Reset entries</button>
+                <div class="card">
+                    <table id="controlPins"></table>
+                    <div class="card-action">
+                        <a onclick="resetPins()" class="right">Reset entries</a>
+                    </div>
+                </div>
             </div>
         </div>
         <footer></footer>
