--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -151,7 +151,7 @@
                 </div>
             </div>
             <div class="card-container">
-              <button onclick="resetSettings()">Reset</button>
+              <button onclick="resetSettings()" class="redBtn">Reset</button>
               <button class="button-primary right" onclick="saveSettings()">save</button>
             </div>
         </form>
