Bug fixes & speed improvements

--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -151,8 +151,8 @@
                 </div>
             </div>
             <div class="card-container">
-              <button onclick="resetSettings()" class="redBtn">Reset</button>
-              <button class="button-primary right" onclick="saveSettings()">save</button>
+              <button onclick="resetSettings()" class="redBtn" type="button">Reset</button>
+              <button class="button-primary right" onclick="saveSettings()" type="button">save</button>
             </div>
         </form>
         <footer></footer>
