Added Cache Control feature
This will allow improved speed on Wi-PWN by preventing unnecessary requests for files each time new pages are loaded

--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -100,7 +100,12 @@
                             <input type="checkbox" name="darkMode" id="darkMode" value="false">
                             <label class="checkbox" for="darkMode"></label>
                         </div>
-                        <br><hr>
+                        <div class="col-12">
+                            <label for="cache">Enable server caching</label>
+                            <input type="checkbox" name="cache" id="cache" value="false">
+                            <label class="checkbox" for="cache"></label>
+                        </div>
+                        <br><br><hr>
                         <div class="col-12">
                             <label for="useLed">Enable LED indicator</label>
                             <input type="checkbox" name="useLed" id="useLed" value="false">
