--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -31,21 +31,15 @@
                 <div class="settingsHeader">Wi-PWN</div>
                 <div class="card">
                     <div class="card-content">
-                        This project is licensed under the <a href="https://creativecommons.org/licenses/by-nc/4.0/"><i title="CC BY-NC 4.0"> Creative Commons Attribution-NonCommercial 4.0 license.</i></a>
-                        <br>
-                        <br>
-                        <b>This software is intended for trained professionals!</b>
-                        <br>It can perform deauth attacks on unprotected <i>802.11</i> Wi-Fi networks, <i>which could be perceived as using an illegal 'Wi-Fi Jammer'.</i><hr>
+                        This project is licensed under the <a href="https://creativecommons.org/licenses/by-nc/4.0/"><i title="CC BY-NC 4.0">Creative Commons Attribution-NonCommercial 4.0 license.</i></a>
+                        <br>It can perform deauth attacks on unprotected <i>802.11</i> Wi-Fi networks, <i>not to be confused with as a 'Wi-Fi Jammer'.</i> This software is based upon the work of Stefan Kremser (Spacehuhn)<br><br>
+                        <button onclick="checkUpdate()">Check for updates</button>
                         <a class="samddAttrib" href="https://samdenty99.github.io/about" target="_blank">
-                            <span>Wi-PWN was designed by <b>samdd design</b>:</span>
-                            <br>
-                            <p>
-                                <button>@samdenty99</button> (Sam Denty)
-                            </p>
+                            <button>@samdenty99</button> (Sam Denty)
                         </a>
                     </div>
                     <div class="card-action">
-                        <a href="https://samdenty99.github.io/r?report-bug-wi-pwn" target="blank_">Report bug</a><a href="https://samdenty99.github.io/projects" class="right" target="blank_">Other projects</a>
+                        <a href="https://samdenty99.github.io/r?https://Wi-PWN.samdd.me/discord" target="blank_">Report bug</a><a href="https://samdenty99.github.io/projects" class="right" target="blank_">Other projects</a>
                     </div>
                 </div>
             </div>
