Sync version 1.6 stage 2

--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -60,12 +60,17 @@
                                 <label for="randSSID">Generate random</label>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row inputCheckbox">
                             <div class="col-6">
                                 <div class="input-container">
                                     <input placeholder=" " type="number" required="" id="num" min="0" max="48" value="48">
                                     <label for="num">Number of clones</label>
                                 </div>
+                            </div>
+                            <div class="col-6">
+                                <input type="checkbox" name="enc" id="enc" value="false">
+                                <label class="checkbox" for="enc"></label>
+                                <label for="enc">Encrypted</label>
                             </div>
                         </div>
                     </div>
