--- a/web_server/html/detector.html
+++ b/web_server/html/detector.html
@@ -14,8 +14,9 @@
         <div id="links">
             <a href="./">Scan</a>
             <a href="users.html">Users</a>
-            <a href="attack.html" class="active">Attack</a>
+            <a href="attack.html">Attack</a>
             <a href="control.html">Control</a>
+            <a href="detector.html" class="active">Detector</a>
             <a href="settings.html">Settings</a>
             <a class="right" href="info.html">Info</a>
         </div>
@@ -147,6 +148,7 @@
                 notify("Failed to save! (E33)");
             });
         }
+        fadeIn();
         </script>
     </div>
 </body>
