--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -94,4 +94,5 @@
         </div>
         <footer></footer>
         <script src="js/functions.js"></script>
+        <script>document.getElementsByClassName('main-wrap')[0].className = 'main-wrap fadeIn'</script>
 </body>
